@@ -1,3 +1,8 @@
+Tue Nov 12 16:27:27 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* auth_gssapi.c (auth_gssapi_create): handle channel bindings
+ 	failure so UDP connections can work [krb5-libs/180]
+
 Tue Nov  5 18:43:46 1996  Tom Yu  <tlyu@mit.edu>
 
 	* configure.in: Revert removal of CopySrcHeader, etc., for now.
